kubernetes/virtual-services/service1-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-virtual-service
  namespace: namespace1
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - route:
    - destination:
        host: app1
        port:
          number: 80
