kubernetes/virtual-services/service2-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service2-virtual-service
  namespace: namespace2
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - route:
    - destination:
        host: app2
        port:
          number: 80
